# python-videoplayer

./: .appveyor.yml  .travis.yml  CMakeLists.txt  conanfile.txt  pyproject.toml  setup.py
.appveyor/: before_build.ps1  before_build.sh
.github/workflows/: before_build.sh  build.yml  linux.yml  macos.yml  tests.yml  windows.yml
tests/: test_videoplayer.py
videoplayer/: CMakeLists.txt  VideoPlayer.c  _VideoPlayer.pyx
